  to the AtkMetaNode caching. [Martin]
+ Added support for specifying the character set for the atkOci9Db driver. [Peter]
+ Added support for modifying add / add-or-copy dialogs from inside the node by
  implementing a modifyDialog method. [Peter]
+ Added support for specifying more dialog window options on a per-theme basis
  by setting the new theme attribute 'dialog_window_options'. [Peter]
+ Added support for dynamically loading stylesheets (for Ajax requests). [Peter]
+ Added $config_application_dir which can be used to separate ATK from your
  application code. [Boy]
+ Added atkManyToManySelectRelation, a new variant of the many to many relation
  which allows you to add items to the relation using auto-completion. Useful 
  for many-to-many relations which have many selectable options. [Peter]
+ Added atkRadioDetailsAttribute, displays radio buttons with options to choose
  from just like the atkRadioAttribute but allows you to use other attributes 
  for detail selections once certain options are selected. [Peter]
+ AtkZip: added parameter to add files to specified filepath [Jeroen]
+ tbsooo|Changes for DocX support. SaveXmlToDoc: specify filepath, 
  ClearProcessDir: remove recursivly [Jeroen]
+ Added atkDocxWriter for Word2007 .docx templates. Enhancement: Create output 
  dir if it doesn't exist. 
  Please check: http://www.achievo.org/wiki/AtkDocumentWriter for tips and
  limitations [Jeroen]
+ Added addHeader support [Peter]
* Fixed sorting on an atkManyToOneRelation field in a destination table. For this 
  fix we had also to clear the sorting fields passed by the session in 
  atkColumnConfig [Peter/Martijn]
* Added support for charset in oci9db driver. Uses the charset that is specified
  in the configfile [PeterB]
* Improved attribute detection in the Metanode caching. [Peter/Martin]
* Fixed bug in atktestcase, when using a testdatabase the normal database
  would be emptied. [Lineke]