@@ -1,6 +1,0 @@
-<script language="JavaScript" src="{$jscode}" type="text/javascript"></script>
-
-<div id="menubody">
-  {atktext id="logged_in_as" module="atk"}: <b>{$name}</b>
-    &nbsp; {if isset($error)}{$error}{/if}
-</div>
