@@ -141,6 +141,7 @@ Changed in ATK 6.2
   implementing a modifyDialog method. [Peter]
 + Added support for specifying more dialog window options on a per-theme basis
   by setting the new theme attribute 'dialog_window_options'. [Peter]
++ Added atkCache, see http://www.achievo.org/wiki/ATK_Cache. [Sandy]
 + Added support for dynamically loading stylesheets (for Ajax requests). [Peter]
 + Added $config_application_dir which can be used to separate ATK from your
   application code. [Boy]
